--- a/portfolio/amina.css
+++ b/portfolio/amina.css
@@ -565,9 +565,9 @@ img {
     display: none;
 }
 @media screen and  (min-width:766px){
-.left-block{
-    min-width: 500px;
-}
+    .left-block{
+        /*min-width: 500px;*/
+    }
 }
 @media  screen and (max-width: 767px) {
     .navbar-brand {
