--- a/portfolio/amina.css
+++ b/portfolio/amina.css
@@ -164,7 +164,7 @@ img {
     background-color: #8000ff;
     margin-bottom: 0%;
     min-height: 450px;
-    padding: 3vh 60px 5rem;
+    padding: 0 60px 5rem;
 
 }
 .right-block {
@@ -401,7 +401,7 @@ img {
 
 .work-list{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap:50px;
     margin-top: 50px;
 
