--- a/portfolio/amina.css
+++ b/portfolio/amina.css
@@ -97,8 +97,9 @@ img {
 
 }
 .paragraph{
-    font-size: 1rem;
+    font-size: 1.1rem;
     text-align: justify;
+    margin:20px 0 15px;
 }
 
 .w-container{
@@ -701,18 +702,20 @@ img {
     height: 100%;
 }
 /* footer */
-#footer {
-    padding: 15px;
-    color: #000;
-    left: 0;
-    top : 50px;
-    bottom: 0;
-    width: 300px;
-    z-index: 9999;
+.footer {
+    margin-top:50px;
+    background-color: var(--main-color);
+    padding-top: 30px;
+    padding-bottom: 50px;
+    color: #fff;
 }
 
 #footer .copyright {
     text-align: end;
+    padding: 20px 0;
+}
+.back-to-top{
+    color: white;
 }
 /* Animation */
 @-webkit-keyframes animate-positive {
