--- a/portfolio/amina.css
+++ b/portfolio/amina.css
@@ -581,6 +581,8 @@ img {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap:50px;
     margin-top: 50px;
+    margin-bottom: 50px;
+
 
 }
 .work{
@@ -668,6 +670,7 @@ img {
     transition: opacity .4s, visibility .4s;
 }
 .work-info-content{
+    max-height: 600px;
     position: relative;
     background-color: #fff;
     color: #000;
