--- a/css/amina.css
+++ b/css/amina.css
@@ -3,6 +3,23 @@
 
 /* =======================general ===================*/
 :root{
+
+    /*--e-global-color-primary: #6ec1e4;*/
+    /*--e-global-color-secondary: #54595f;*/
+    /*--e-global-color-text: #7a7a7a;*/
+    /*--e-global-color-accent: #61ce70;*/
+    /*--e-global-color-8173635: #b7f;*/
+    /*--e-global-color-3e3c75b: #2c3599;*/
+    /*--e-global-color-702e101: #efefef;*/
+    /*--e-global-typography-primary-font-family: "Poppins";*/
+    /*--e-global-typography-primary-font-weight: 600;*/
+    /*--e-global-typography-secondary-font-family: "Roboto Mono";*/
+    /*--e-global-typography-secondary-font-weight: 400;*/
+    /*--e-global-typography-text-font-family: "Roboto Mono";*/
+    /*--e-global-typography-text-font-weight: 400;*/
+    /*--e-global-typography-accent-font-family: "Roboto Mono";*/
+    /*--e-global-typography-accent-font-weight: 500;*/
+
     --box-shadow : 0px 10px #e82750;
     --main-color : #8000ff;
     --second-color: #e82750;
@@ -24,14 +41,14 @@ html{
     background-color: var(--main-color);
 }
 ::-webkit-scrollbar-track{
-    background-color: var(--second-color);
+    background-color: #fff;
 }
 ::-webkit-scrollbar-thumb{
     background-color: var(--main-color);
     border-radius: 10px;
 }
 ::-webkit-scrollbar{
-  width : 12px;
+  width : 10px;
 }
 body {
     color: #1a1b1f;
@@ -42,8 +59,23 @@ body {
     /*position: relative;*/
 
 }
-a{
-    text-decoration: none;
+a {
+    color: var(--second-color);
+    font-size: 1.1em;
+    border-bottom: 2px solid transparent; /* Adds a bottom border */
+    transition: color 0.3s, border-bottom 0.3s; /* Smooth transition */
+    text-decoration: none; /* Removes underline */
+}
+
+a:hover {
+    color: grey;
+    border-bottom: 2px solid var(--main-color);
+}
+
+
+
+a:active {
+    color: #ff5722; /* Color when link is active (clicked) */
 }
 ul{
     list-style: none;
@@ -286,37 +318,13 @@ img {
 .img_about {
     border-radius: 30%;
     width: 230px;
-    height: 250px;
+    height: 240px;
     text-align: center;
-    margin: auto;
+    margin: 2rem auto;
     display: flex;
     object-fit: cover;
 }
-.btn_about{
-    display: block;
-    margin: 50px auto;
-    width:  fit-content;
-    padding: 14px 50px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: #fff;
-    transition: background-color 0.5s;
-    background-color: var(--second-color);
 
-}
-.section-title-about{
-    font-size: 2rem;
-    padding: 15px 0;
-    text-align: center;
-    line-height: 1.2;
-    color: #222;
-    position: relative;
-}
-.btn_about:hover{
-    background-color: #efdffb;
-    color: #000;
-
-}
 .section-title{
     font-size: 2rem;
     padding: 15px 0;
@@ -336,54 +344,88 @@ img {
     background-color: var(--main-color);
 
 }
-.section-title::after{
-    content: '';
-    position : absolute;
-    bottom: -4px;
-    left: 50%;
-    transform: translate(-50%);
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    background-color: var(--main-color);
+.about-me {
+    font-size: 1rem;
+    line-height: 1.6;
+}
+.profile-pic {
+    width: 100%;
+    border-radius: 8px;
+    max-width: 300px;
+}
 
+.email-btn {
+        display: block;
+        margin: 0 auto;
+        width:  fit-content;
+        padding: 10px 20px;
+        border-radius: 6px;
+        text-decoration: none;
+        color: #fff;
+        transition: background-color 0.5s;
+        background-color: var(--second-color);
 }
 /* =================== skills ======================== */
-.skills .progress {
-    height: 60px;
-    display: block;
-    background: none;
-    border-radius: 0;
-}
 
-.skills .progress .skill {
-    padding: 0;
-    margin: 0 0 6px 0;
-    text-transform: uppercase;
-    display: block;
-    font-weight: 600;
-    font-family: "Poppins", sans-serif;
-    color: #050d18;
-}
-
-.skills .progress .skill .val {
-    float: right;
-    font-style: normal;
-}
-
-.skills .progress-bar-wrap {
-    background: whitesmoke;
-    height: 11px;
-    border-radius: 10px;
-}
-
-.skills .progress-bar {
-    width: 1px;
-    height: 11px;
+.skills-section {
     background-color: var(--main-color);
-    border-radius: 10px;
-    animation: animate-positive 3s;
+    padding: 2rem;
+    color: #ffffff;
+    text-align: center;
+    min-height: 35rem;
 }
+.skills-card {
+    border-radius: 15px;
+    background-color: #ffffff;
+    color: #333333;
+    margin-top: -10rem;
+    padding: 2rem;
+    position: relative;
+    z-index: 1;
+}
+.skills-card h5 {
+    margin-top: 1rem;
+    font-weight: 600;
+}
+.skill-column {
+    border-left: 1px solid #dddddd;
+    padding: 1rem 0;
+}
+.skill-column:first-child {
+    border-left: none;
+}
+.icon {
+    font-size: 2rem;
+    color: var(--second-color);
+}
+.skill-paragraph{
+    justify-content: center;
+    max-width: 500px;
+    padding-bottom: 5rem;
+}
+/* Custom Styles for the Vibe Section */
+.vibe-section {
+    justify-content: center;
+    padding-bottom: 15rem;
+}
+.vibe-section h2 {
+    font-size: 2rem;
+}
+.emoji-list {
+    font-size: 2.5rem;
+}
+.emoji-description {
+    font-size: 1.1rem;
+    margin-top: 10px;
+}
+.interest-quote {
+    font-style: italic;
+    color: #fff;
+    font-weight: 250;
+    font-size: 1.3rem;
+    margin-top: 2rem;
+}
+
 /* ====================== certifs =================*/
 .container-swp{
     display: flex;
@@ -438,7 +480,7 @@ img {
     left: 0;
     right: 0;
     margin-inline: auto;
-    filter: blur(45px);
+    filter: blur(30px);
 
 }
 .card-name{
@@ -1064,3 +1106,7 @@ img {
         padding: 12px 0;
     }
 }
+
+
+
+
