--- a/css/amina.css
+++ b/css/amina.css
@@ -69,7 +69,7 @@ a {
 
 a:hover {
     color: grey;
-    border-bottom: 2px solid var(--main-color);
+    border-bottom: 1px solid var(--main-color);
 }
 
 
@@ -422,7 +422,7 @@ img {
     font-style: italic;
     color: #fff;
     font-weight: 250;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     margin-top: 2rem;
 }
 
@@ -509,24 +509,39 @@ img {
     border-radius: .25rem;
     color : #fff;
 }
-.swiper-button-prev::after,
-.swiper-button-next::after{
-    content: '';
-}
+
 .swiper-button-next,
 .swiper-button-prev {
-    width: initial;
-    height: initial;
-    font-size: 3rem;
-    color: #000;
-    display: none;
+    color: #fff; /* Change arrow color */
+    background-color: rgba(0, 0, 0, 0.5); /* Add background */
+    width: 40px;
+    height: 40px;
+    border-radius: 50%; /* Rounded buttons */
 }
-.swiper-button-prev{
-    left: 0;
+
+/* Hover effect */
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+    background-color: rgba(0, 0, 0, 0.8); /* Darker background on hover */
+    transform: scale(1.1); /* Slightly larger on hover */
 }
-.swiper-button-next{
-    right: 0;
+
+/* Customize arrow size */
+.swiper-button-next::after,
+.swiper-button-prev::after {
+    font-size: 18px; /* Adjust arrow icon size */
 }
+
+/* Optional: adjust position */
+.swiper-button-next {
+    right: 2px; /* Adjust right-side positioning */
+
+}
+
+.swiper-button-prev {
+    left: 2px; /* Adjust left-side positioning */
+}
+
 .swiper-pagination-bullet{
     background-color: hsl(212,32%,40%);
     opacity: 1;
